--- a/1.0/Dockerfile.arm
+++ b/1.0/Dockerfile.arm
@@ -20,8 +20,8 @@ FROM resin/armv7hf-debian:stretch
 
 LABEL summary="Heptio Velero for ARM" \
       description="Heptio Velero for ARM devices" \
-      name="mylesagray/rpi-velero" \
-      url="https://github.com/mylesagray/rpi-velero" \
+      name="mylesagray/velero" \
+      url="https://github.com/mylesagray/arm-velero" \
       maintainer="Myles Gray <mg@mylesgray.com>"
 
 ENV VELERO_VERSION 1.0.0
@@ -32,10 +32,11 @@ ADD https://github.com/heptio/velero/releases/download/v${VELERO_VERSION}/velero
 
 RUN tar -zxvf /velero.tgz \
     && rm /velero.tgz \
-    && mv velero-v${VELERO_VERSION}-linux-arm/velero /usr/bin/velero
+    && mv velero-v${VELERO_VERSION}-linux-arm/velero /velero \
+    && chmod +x /velero
 
 RUN [ "cross-build-end" ]
 
 USER nobody:nobody
 
-ENTRYPOINT ["/usr/bin/velero"]
+ENTRYPOINT ["/velero"]
