--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
+language: minimal
 sudo: required
+addons:
+  apt:
+    packages:
+      - docker-ce # use experimental features
+
 services:
   - docker
-
 before_install:
-  - docker --version 
-  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json # try to use manifests
-  - mkdir -p $HOME/.docker
-  - echo '{"experimental":"enabled"}' | tee $HOME/.docker/config.json # needed to use docker manifest
+  - docker --version  # document the version travis is using
+  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+  - mkdir -p $HOME/.docker && echo '{"experimental":"enabled"}' | tee $HOME/.docker/config.json
   - sudo service docker restart
 
-install:
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset # setup QEMU for cross-builds
-
-script:
-  - make qemu
-  - make wrap
-  - make build
-
-after_success: # these can fail without breaking the build
-  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-  - make push
-  - make manifest
+jobs:
+  include:
+    - stage: build
+      script:
+        - make qemu
+        - make wrap
+        - make build
+    - stage: push
+      script:
+        - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        - make push
+        - make manifest
