Piped in docker password

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ jobs:
         - make build
     - stage: push
       script:
-        - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - make push
         - make manifest
