--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ script:
 - make wrap
 - make build
 after_success:
-- if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo "$DOCKER_PASSWORD" | docker login
-  -u "$DOCKER_USERNAME" --password-stdin ; make push ; make manifest ; fi
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- make push
+- make manifest
 notifications:
   slack:
     rooms:
